Hotfix link error

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <header class="company-name"><span class="light-text">Kitty</span><span class="special-text blue-highlight">Kingdom</span></header>
        </div>
        <span>
-        <a class="btn btn-primary">Author Github</a>
+        <a class="btn btn-primary" href="https://github.com/mohammedajao">Author Github</a>
         </span>
        <span>
-        <a class="btn btn-tertiary" href="mohammedajao.github.io">Author Portfolio</a>
+        <a class="btn btn-tertiary" href="https://mohammedajao.github.io">Author Portfolio</a>
         </span>
     </div>
 </section>
